fix: collect(Collectors.toList()를 toList()로 변경
bit.ly/3g4kkS5